# growatt-spf-battery-guard

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  MAINTAINABILITY_AUDIT.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  ROADMAP.md  RUNBOOK.md  growatt_power_guard.py  install_cloud_cron.sh  install_dashboard_proxy.sh  install_dashboard_service.sh  install_discord_bot_service.sh  install_growatt_schedule.ps1  install_logrotate.sh  packaged_entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt  schedule.json  schedule_overrides.example.json  update_server.sh  verify_local.sh
growatt_guard/: __init__.py  __main__.py  alerts.py  audit.py  backups.py  cli.py  config.py  dashboard.py  dashboard_assets.py  dashboard_insights.py  dashboard_metrics.py  dashboard_planning.py  dashboard_render_components.py  dashboard_service.py  dashboard_viewmodel.py  diagnostics.py  discord_control.py  exceptions.py  forecast_calibration.py  growatt_api.py  growatt_telemetry.py  health.py  load_learning.py  modes.py  notifications.py  operational_status.py  ops_review.py  paths.py  pause.py  pvoutput.py  reports.py  schedule.py  schedule_overrides.py  schedule_views.py  state.py  topup.py  topup_status.py  weather.py
scripts/: check_public_hygiene.py  generate_dashboard_icons.py
tests/: helpers.py  run_quiet.py  test_audit.py  test_backups.py  test_config.py  test_dashboard.py  test_dashboard_policy.py  test_diagnostics.py  test_discord_control.py  test_forecast_calibration.py  test_growatt_api.py  test_growatt_power_guard.py  test_hardening.py  test_install_cloud_cron.py  (+21 more)
(+10 files in other folders)
