[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growatt-spf-battery-guard"
version = "0.1.0"
description = "Battery-preservation automation for Growatt SPF inverters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "growattServer==2.2.0",
    "python-dotenv==1.2.2",
    "requests>=2.31.0",
    "discord.py>=2.3,<3",
]

[project.scripts]
growatt-guard = "growatt_guard.cli:main"

[tool.setuptools.packages.find]
include = ["growatt_guard*"]
