[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growatt-spf-battery-guard"
version = "0.1.0"
description = "Battery-preservation automation for Growatt SPF inverters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "growattServer==2.2.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "discord.py==2.7.1",
]

[project.scripts]
growatt-guard = "growatt_guard.cli:main"

[tool.setuptools.packages.find]
include = ["growatt_guard*", "scripts*"]

[tool.setuptools]
py-modules = ["growatt_power_guard"]

[tool.setuptools.package-data]
growatt_guard = ["assets/*.css", "assets/*.js"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Keep editor diagnostics focused on syntax errors and undefined names. The
# existing codebase has not yet adopted Ruff's broader style and cleanup rules.
select = ["E9", "F63", "F7", "F82"]
